--- a/index.html
+++ b/index.html
@@ -384,13 +384,25 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="modal-close-icon" width="18" height="18">
                     <use href="./image/close-icons.svg#icon-close-black"></use>
                 </svg>
             </button>
+            <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+            <form class="modal-form">
+                <p class="modal-form-title">Ім'я</p>
+                <input type="text" name="user-name" class="modal-input" placeholder="">
+                <p class="modal-form-title">Телефон</p>
+                <input type="text" name="user-tel" class="modal-input" placeholder="">
+                <p class="modal-form-title">Пошта</p>
+                <input type="text" name="user-email" class="modal-input" placeholder="">
+                <p class="modal-form-title">Коментар</p>
+                <input type="text" name="user-comment" class="modal-input" placeholder="">
+                <button type="submit" class="button-modal-submit">Відправити</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
