--- a/index.html
+++ b/index.html
@@ -382,6 +382,14 @@
                 </ul>
             </p>
             </div>
+            <div class="form-footer">
+                <h3 class="form-footer-title">Підпишіться на розсилку</h3>
+                <input 
+                type="email" 
+                name="sub-email" 
+                class="footer-input"
+                placeholder="E-mail">
+            </div>
         </div>
     </footer>
     <div class="backdrop" data-modal>
@@ -394,13 +402,30 @@
             <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
             <form class="modal-form">
                 <p class="modal-form-title">Ім'я</p>
-                <input type="text" name="user-name" class="modal-input" placeholder="">
+                <input 
+                type="text" 
+                name="user-name" 
+                class="modal-input" 
+                placeholder=""
+                >
                 <p class="modal-form-title">Телефон</p>
-                <input type="text" name="user-tel" class="modal-input" placeholder="">
+                <input 
+                type="text" 
+                name="user-tel" 
+                class="modal-input" 
+                placeholder="">
                 <p class="modal-form-title">Пошта</p>
-                <input type="text" name="user-email" class="modal-input" placeholder="">
+                <input 
+                type="text" 
+                name="user-email" 
+                class="modal-input" 
+                placeholder="">
                 <p class="modal-form-title">Коментар</p>
-                <input type="text" name="user-comment" class="modal-input" placeholder="">
+                <input 
+                type="text" 
+                name="user-comment" 
+                class="modal-input comment" 
+                placeholder="Введіть текст">
                 <button type="submit" class="button-modal-submit">Відправити</button>
             </form>
         </div>
