--- a/index.html
+++ b/index.html
@@ -384,15 +384,25 @@
             </div>
             <div class="form-footer">
                 <h3 class="form-footer-title">Підпишіться на розсилку</h3>
-                <input 
-                type="email" 
-                name="sub-email" 
-                class="footer-input"
-                placeholder="E-mail">
+                <form class="footer-online-form">
+                    <input 
+                    type="email" 
+                    name="sub-email" 
+                    class="footer-input"
+                    placeholder="E-mail">
+                    <div class="footer-button-wrap">
+                        <button type="submit" class="footer-button-submit">Підписатися</button>
+                        <svg class="footer-button-icon" height="24" width="24">
+                            <use href="./image/modal-icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </div>
+                </form>
+                
             </div>
+
         </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="modal-close-icon" width="18" height="18">
@@ -466,7 +476,7 @@
                         </use>
                     </svg>
                 </span>
-                Погоджуюся з розсилкою та приймаю  Умови договору</label>
+                Погоджуюся з розсилкою та приймаю Умови договору</label>
             </div> 
                 <button type="submit" class="button-modal-submit">Відправити</button>
             </form>
