--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                         </use>
                     </svg>
                 </span>
-                Погоджуюся з розсилкою та приймаю Умови договору</label>
+                Погоджуюся з розсилкою та приймаю <a>Умови договору</a></label>
             </div> 
                 <button type="submit" class="button-modal-submit">Відправити</button>
             </form>
