--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                 class="modal-comment-text"
                 placeholder="Введіть текст"></textarea>
             </div>
-            <div class="modal-field">
+            <div class="modal-field check-margin">
                 <input 
                 type="checkbox" 
                 name="privacy" 
@@ -476,7 +476,7 @@
                         </use>
                     </svg>
                 </span>
-                Погоджуюся з розсилкою та приймаю <a>Умови договору</a></label>
+                Погоджуюся з розсилкою та приймаю <a href="#" class="modal-check-link">Умови договору</a></label>
             </div> 
                 <button type="submit" class="button-modal-submit">Відправити</button>
             </form>
